Added copyright & license notice.

--- a/web/WEB-INF/jspf/login.jspf
+++ b/web/WEB-INF/jspf/login.jspf
@@ -1,3 +1,7 @@
+<%--
+    Copyright (c) 2013 David Zwarg <david.zwarg@gmail.com>
+    See LICENSE in the project root for copying permission.
+--%>
 <%
  com.zwarg.guestlist.data.Database conn = com.zwarg.guestlist.data.Database.newConnection();
  
