--- a/web/styles/default.css
+++ b/web/styles/default.css
@@ -1,3 +1,8 @@
+/*
+    Copyright (c) 2013 David Zwarg <david.zwarg@gmail.com>
+    See LICENSE in the project root for copying permission.
+*/
+
 body
 {
   font-family: Arial, Helvetica, sans-serif;
