--- a/web/WEB-INF/jspf/authorize.jspf
+++ b/web/WEB-INF/jspf/authorize.jspf
@@ -1,3 +1,7 @@
+<%--
+    Copyright (c) 2013 David Zwarg <david.zwarg@gmail.com>
+    See LICENSE in the project root for copying permission.
+--%>
 <%@page import="com.zwarg.guestlist.data.Host"%>
 
 <% 
